updated content and links styling

--- a/pages/digital/responsivesignage.html
+++ b/pages/digital/responsivesignage.html
@@ -30,7 +30,7 @@
             Riders are reminded of their destinations and connected to the history of amusement, entertainment, and seaside activity that brought trains to that destination in the first place. The project also asks if signage can be dynamically triggered, suggesting an application of urban tech along transit paths. 
             <br>
             <br>
-            A full video of the project can be viewed <a href="https://youtu.be/PVHHxMUgq4Q">here.</a>
+            A full video of the project can be viewed <a class="content__links" href="https://youtu.be/PVHHxMUgq4Q">here.</a>
         </p>
         <div class="project__image">
             <img src="../../data/digital/responsivearch.gif">
