--- a/pages/spatial/miami.html
+++ b/pages/spatial/miami.html
@@ -24,16 +24,16 @@
     
     <br>
     <div class="project">
-        <p class="project__index">2D</p>
-        <p class="project__header">Some Sketches, Digitized</p>
-        <p class="project__text">
-            A personal project, these sketches are daily reflections. They document explorations, observations, and memories in a quick visual way. I built a simple gallery to view and share a selection of these images, and added a fun tool for filtering based on color. 
-            <br>
-            <br>
-            Explore the full set of images <a class="content__links" href="https://eddiejoe-antonio.github.io/dailysketch-viz/">here.</a> 
+        <p class="project__index">4S</p>
+        <p class="project__header">Designing A Marine Cemetery in Miami Bay</p>
+        <p class="project__text">Sited in Florida’s Biscayne Bay, this academic project proposed an aquatic cemetery in response to the rich cultural and urban landscape of Miami. As a form of marine urbanism, the city of the dead draws on the specific practices of Miami to produce spaces that facilitate funerary ritual. 
+		 	<br>
+             <br>	
+            The neighborhood parade, the spiritual procession, the community dance, the somber, family oriented burial, and the days of worship and return are here given priority and offered prominent roles in the burial system through an exchange between family crypts and neighborhood plazas. The procession descends into the dark, privacy of the subterranean, introducing a new relationship to Biscayne Bay while providing a comfortable, shaded space for mourning. 
         </p>
+
         <div class="project__image">
-            <img src="../../data/digital/sketch.png">
+            <img src="../../data/spatial/GSD Portfolio.jpg">
         </div>
     </div>
 </body>
