--- a/pages/spatial/mpjstatepark.html
+++ b/pages/spatial/mpjstatepark.html
@@ -29,7 +29,7 @@
         <p class="project__text">Over a 3 month period, I participated in a series of both virtual and in-person outreach sessions guiding the renovation of Marsha P. Johnson State Park. I facilitated breakout groups, conducted Spanish-language interviews with park users, and helped develop illustrative, planting, and grading plans. I modeled the park redesign through multiple iterations and created perspectival and aerial renderings for public comment, both at outreach meetings and on the NYS Parks website.
             <br>
             <br>
-            The outreach process surrounding this project was profiled <a href="https://architizer.com/blog/inspiration/stories/acclaimed-redesign-state-park-community-led-design/">here</a>. 
+            The outreach process surrounding this project was profiled <a class="content__links" href="https://architizer.com/blog/inspiration/stories/acclaimed-redesign-state-park-community-led-design/">here.</a> 
         </p>
         <div class="project__image">
             <img src="../../data/spatial/210430_RENDERED-AERIAL-UPDATED-REDUCED-scaled.jpg">
