--- a/spatial.html
+++ b/spatial.html
@@ -53,5 +53,13 @@
         </div>
     </div>
     <br>
+    <div class="project">
+        <p class="project__index">4S</p>
+        <p class="project__header"><a class="project__links" href="pages/spatial/miami.html">Designing A Marine Cemetery in Miami Bay</a></p>
+        <div class="project__image">
+            <a href="pages/spatial/miami.html"><img src="data/spatial/GSD Portfolio.jpg"></a>
+        </div>
+    </div>
+    <br>
 </body>
 </html>
