--- a/pages/digital/mesh.html
+++ b/pages/digital/mesh.html
@@ -29,7 +29,7 @@
         <p class="project__text">This project investigates the spatial and temporal makeup of the NYC Mesh WiFi network, a community driven internet network of activist-citizens building a freely accessible, open, wireless physical structure of interconnected routers. Founded in 2014, NYC Mesh is currently concentrated in lower Manhattan and Brooklyn and is expanding with the efforts of user-volunteers. The volunteer-run organization currently provides New Yorkers with over 623 active connections, bypassing the need for provision by conventional Internet Service Providers (ISPs) that constitute an oligopoly of internet service in NYC. Through D3 data visualizations, this project seeks to understand how and when the NYC Mesh WiFi network spread and gained momentum.
             <br>
             <br>
-            The full site can be accessed <a href="https://eddiejoe-antonio.github.io/mesh-viz/">here.</a>
+            The full site can be accessed <a class="content__links" href="https://eddiejoe-antonio.github.io/mesh-viz/">here.</a>
         </p>
         <div class="project__image">
             <img src="../../data/digital/meshvizb.gif">
