--- a/pages/research/buellcenter.html
+++ b/pages/research/buellcenter.html
@@ -29,7 +29,7 @@
         <p class="project__text">As part of a larger initiative to interrogate land in the Americas, I have developed historical sections of the site of the Buell Center. Illustrating conditions back to the early 1600s, the sections are detailed conceptual drawings that highlight the constraining, leveling, and manipulating of land in the heart of Morningside Heights. Primary sources included survey information from Columbia’s Butler Archives, McKim Mead and White drawings from the Avery Archives, historical maps of Manhattan, and etchings of the Bloomingdale Insane Asylum.
             <br>
             <br>
-            The drawings will feature in an upcoming exhibition display at the <a href="https://buellcenter.columbia.edu/">Buell Center</a> itself. 
+            The drawings will feature in an upcoming exhibition display at the <a class="content__links" href="https://buellcenter.columbia.edu/">Buell Center</a> itself. 
         </p>
         <div class="project__image">
             <img src="../../data/research/campus.gif">
