--- a/pages/research/grasshopperparametric.html
+++ b/pages/research/grasshopperparametric.html
@@ -29,7 +29,7 @@
         <p class="project__text">In this experimental project, I explored how Grasshopper could be used as a tool for voter-driven outreach on spatial projects. The “traditional” outreach configuration often involves static meetings with participants speaking one by one, in unison, or in discord. While often a consensus opinion is clear, it is sometimes the loudest or most persistent voices that get their thoughts documented and incorporated into a design. This project attempted to propose an alternative model, where all participants in an outreach process submitted their spatial preferences for the project on a website. Their responses then generated a parametrically-driven design that quantified public opinion and used it to create spaces in ideal climatic zones of the site. 
             <br>
             <br>
-            Read the full report <a href="https://artifact-essay-eddiejoe.glitch.me/">here.</a>
+            Read the full report <a class="content__links" href="https://artifact-essay-eddiejoe.glitch.me/">here.</a>
         </p>
         <div class="project__image">
             <img src="../../data/research/8-part-gif">
