--- a/pages/spatial/andersonpark.html
+++ b/pages/spatial/andersonpark.html
@@ -32,7 +32,7 @@
             I also conducted a detailed embodied carbon assessment on the project utilizing a custom Grasshopper script. The script takes volume totals by material and converts these to embodied carbon using industry coefficients. Prototyped on this project, the goal of this tool is to advance a more sustainable design from an earlier stage of design development. 
             <br>
             <br>
-            Read more about Anderson Plaza <a href="https://rew-online.com/new-rochelle-breaks-ground-on-4m-transformation-of-downtown-plaza/">here.</a> 
+            Read more about Anderson Plaza <a class="content__links" href="https://rew-online.com/new-rochelle-breaks-ground-on-4m-transformation-of-downtown-plaza/">here.</a> 
         </p>
 
         <div class="project__image">
