updated to include linkedin links

--- a/pages/digital/mesh.html
+++ b/pages/digital/mesh.html
@@ -26,7 +26,10 @@
     <div class="project">
         <p class="project__index">0D</p>
         <p class="project__header">NYC Mesh: An Exploratory Data Visualization</p>
-        <p class="project__text">This project investigates the spatial and temporal makeup of the NYC Mesh WiFi network, a community driven internet network of activist-citizens building a freely accessible, open, wireless physical structure of interconnected routers. Founded in 2014, NYC Mesh is currently concentrated in lower Manhattan and Brooklyn and is expanding with the efforts of user-volunteers. The volunteer-run organization currently provides New Yorkers with over 623 active connections, bypassing the need for provision by conventional Internet Service Providers (ISPs) that constitute an oligopoly of internet service in NYC. Through D3 data visualizations, this project seeks to understand how and when the NYC Mesh WiFi network spread and gained momentum.
+        <p class="project__text">This project investigates the spatial and temporal makeup of the NYC Mesh WiFi network, a community driven internet network of activist-citizens building a freely accessible, open, wireless physical structure of interconnected routers. Founded in 2014, NYC Mesh is currently concentrated in lower Manhattan and Brooklyn and is expanding with the efforts of user-volunteers. The volunteer-run organization currently provides New Yorkers with over 623 active connections, bypassing the need for provision by conventional Internet Service Providers (ISPs) that constitute an oligopoly of internet service in NYC. 
+            <br>
+            <br>
+            I collaborated on this data exploration with <a class="content__links" href="https://www.linkedin.com/in/matthew-heaton2/">Matthew Heaton</a> and <a class="content__links" href="https://www.linkedin.com/in/mia-winther-tamaki-404437170/">Mia Winther-Tamaki.</a> Through D3 data visualizations and Mapbox scroller features, we seek to understand how and when the NYC Mesh WiFi network spread and gained momentum.
             <br>
             <br>
             The full site can be accessed <a class="content__links" href="https://eddiejoe-antonio.github.io/mesh-viz/">here.</a>
