updated embodied carbon page
Updated headers

--- a/pages/research/grasshopperparametric.html
+++ b/pages/research/grasshopperparametric.html
@@ -9,9 +9,7 @@
     <title>Eddie Joe Antonio</title>
 </head>
 <body>
-    <!--<p><a class="title" href="https://www.linkedin.com/in/eddie-joe-antonio-301b75180/">Eddie Joe Antonio</a></p>-->
     <h1><a class="title" href="../../index.html">Eddie Joe Antonio</a></h1>
-    <!--<h1>Eddie Joe Antonio</h1>-->
     <span class="responsive-spacing"></span>
 
 
@@ -32,7 +30,7 @@
             Read the full report <a class="content__links" href="https://artifact-essay-eddiejoe.glitch.me/">here.</a>
         </p>
         <div class="project__image">
-            <img src="../../data/research/8-part-gif">
+            <img src="../../data/research/prototype GIF.gif">
         </div>
     </div>
 </body>
