--- a/research.html
+++ b/research.html
@@ -9,9 +9,7 @@
     <title>Eddie Joe Antonio</title>
 </head>
 <body>
-    <!--<p><a class="title" href="https://www.linkedin.com/in/eddie-joe-antonio-301b75180/">Eddie Joe Antonio</a></p>-->
     <h1><a class="title" href="index.html">Eddie Joe Antonio</a></h1>
-    <!--<h1>Eddie Joe Antonio</h1>-->
     <span class="responsive-spacing"></span>
 
 
@@ -35,12 +33,20 @@
         <p class="project__index">1R</p>
         <p class="project__header"><a class="project__links" href="pages/research/grasshopperparametric.html">Voter-Driven Parametric Design</a></p>
         <div class="project__image">
-            <a href="pages/research/grasshopperparametric.html"><img src="data/research/8-part-gif"></a>
+            <a href="pages/research/grasshopperparametric.html"><img src="data/research/prototype GIF.gif"></a>
         </div>
     </div>
     <br>
     <div class="project">
         <p class="project__index">2R</p>
+        <p class="project__header"><a class="project__links" href="pages/research/embodiedcarbon.html">Embodied Carbon Tool</a></p>
+        <div class="project__image">
+            <a href="pages/research/embodiedcarbon.html"><img src="data/research/embodiedcarbon.gif"></a>
+        </div>
+    </div>
+    <br>
+    <div class="project">
+        <p class="project__index">3R</p>
         <p class="project__header"><a class="project__links" href="pages/research/buellcenter.html">Temple Hoyne Buell Center at Columbia University: Morningside</a></p>
         <div class="project__image">
             <a href="pages/research/buellcenter.html"><img src="data/research/campus.gif"></a>
