--- a/pages/spatial/miami.html
+++ b/pages/spatial/miami.html
@@ -9,9 +9,7 @@
     <title>Eddie Joe Antonio</title>
 </head>
 <body>
-    <!--<p><a class="title" href="https://www.linkedin.com/in/eddie-joe-antonio-301b75180/">Eddie Joe Antonio</a></p>-->
     <h1><a class="title" href="../../index.html">Eddie Joe Antonio</a></h1>
-    <!--<h1>Eddie Joe Antonio</h1>-->
     <span class="responsive-spacing"></span>
 
 
@@ -28,8 +26,10 @@
         <p class="project__header">Designing A Marine Cemetery in Miami Bay</p>
         <p class="project__text">Sited in Florida’s Biscayne Bay, this academic project proposed an aquatic cemetery in response to the rich cultural and urban landscape of Miami. As a form of marine urbanism, the city of the dead draws on the specific practices of Miami to produce spaces that facilitate funerary ritual. 
 		 	<br>
-             <br>	
-            The neighborhood parade, the spiritual procession, the community dance, the somber, family oriented burial, and the days of worship and return are here given priority and offered prominent roles in the burial system through an exchange between family crypts and neighborhood plazas. The procession descends into the dark, privacy of the subterranean, introducing a new relationship to Biscayne Bay while providing a comfortable, shaded space for mourning. 
+            <br>	
+            The neighborhood parade, the spiritual procession, and the community dance are given priority and offered prominent roles in the burial system through an exchange between family crypts and neighborhood plazas. The procession descends into the dark, privacy of the subterranean, introducing a new relationship to Biscayne Bay while providing a comfortable, shaded space for mourning.
+            <br>
+            <br>I designed this project as an undergraduate architecture student in <a class="content__links" href="https://www.stevenharrisarchitects.com/">Steven Harris</a> and <a class="content__links" href="https://www.architecture.yale.edu/faculty/550-gavin-hogben">Gavin Hogben’s</a> studio at Yale University. 
         </p>
 
         <div class="project__image">
