--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Eddie Joe Antonio</title>
 </head>
 <body>
-    <h1><a class="title" href="index.html">Eddie Joe Antonio</a></h1>
+    <h1><a class="title" href="https://eddiejoeantonio.com/">Eddie Joe Antonio</a></h1>
     <span class="responsive-spacing"></span>
 
     <a class="links" href="research.html">research</a>
