updated greenway link

--- a/pages/spatial/greenway.html
+++ b/pages/spatial/greenway.html
@@ -30,7 +30,7 @@
             Along its 4,000 linear foot length, the project navigates overpasses, bridges, subway tunnels, and other infrastructural obstacles. I modeled the entire 7 acre park and much of its urban context–including five Harlem River bridges–to generate dozens of renderings. These images, both explanatory and descriptive, assisted in client, community board, and internal presentations and contributed to design drawing development. 
             <br>
             <br>
-            Read the award announcement <a class="content__links" href="https://www.aiany.org/architecture/featured-projects/view/manhattan-greenway-harlem-river/#:~:text=Located%20between%20125th%20and%20132nd,fishing%2C%20grilling%2C%20and%20performance.">here.</a>
+            Read the award announcement <a class="content__links" href="https://www.aiany.org/architecture/featured-projects/view/manhattan-greenway-harlem-river/">here.</a>
         </p>
         <div class="project__image">
             <img src="../../data/spatial/hrgrenderings.gif">
