updates for intro animation
Updated styles, created json

--- a/index.html
+++ b/index.html
@@ -4,18 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="text/javascript" src="./d3.js"></script>
     <link rel="stylesheet" href="./styles.css">
     <link rel="icon" type="image/png" href="data/identity/faviconc.png"/>
     <title>Eddie Joe Antonio</title>
 </head>
 <body>
-    <h1><a class="title" href="https://eddiejoeantonio.com/">Eddie Joe Antonio</a></h1>
+    <h1>
+        <a class="title" href="https://eddiejoeantonio.com/">Eddie Joe Antonio</a>
+        <a class="title" href="https://eddiejoeantonio.com/">Eddie Joe Antonio</a>
+        <a class="title" href="https://eddiejoeantonio.com/">Eddie Joe Antonio</a>
+    </h1>
     <span class="responsive-spacing"></span>
 
     <a class="links" href="research.html">research</a>
     <a class="links" href="spatial.html">spatial</a>
     <a class="links" href="digital.html">digital</a>
     <a class="links" href="about.html">about</a>
+    <br>
+    <img class="homepage__image" src="./data/identity/homepage.png" />
 
 </body>
 </html>
