--- a/research.html
+++ b/research.html
@@ -19,7 +19,7 @@
     <a class="links" href="spatial.html">spatial</a>
     <a class="links" href="digital.html">digital</a>
     <a class="links" href="about.html">about</a>
-
+    
     <br>
     <div class="project">
         <p class="project__index">0R</p>
@@ -28,9 +28,19 @@
             <a href="pages/research/migrantsupportsystems.html"><img src="data/research/dc_snippet.png"></a>
         </div>
     </div>
+
     <br>
     <div class="project">
         <p class="project__index">1R</p>
+        <p class="project__header"><a class="project__links" href="pages/research/publicwifi.html">Activating Public WiFi: Re-considering opportunities to connect in contemporary New York</a></p>
+        <div class="project__image">
+            <a href="pages/research/publicwifi.html"><img src="data/research/publicwifi_mockup.png"></a>
+        </div>
+    </div>
+
+    <br>
+    <div class="project">
+        <p class="project__index">2R</p>
         <p class="project__header"><a class="project__links" href="pages/research/grasshopperparametric.html">Voter-Driven Parametric Design</a></p>
         <div class="project__image">
             <a href="pages/research/grasshopperparametric.html"><img src="data/research/prototype GIF.gif"></a>
@@ -38,7 +48,7 @@
     </div>
     <br>
     <div class="project">
-        <p class="project__index">2R</p>
+        <p class="project__index">3R</p>
         <p class="project__header"><a class="project__links" href="pages/research/embodiedcarbon.html">Embodied Carbon Tool</a></p>
         <div class="project__image">
             <a href="pages/research/embodiedcarbon.html"><img src="data/research/embodiedcarbon.gif"></a>
@@ -46,7 +56,7 @@
     </div>
     <br>
     <div class="project">
-        <p class="project__index">3R</p>
+        <p class="project__index">4R</p>
         <p class="project__header"><a class="project__links" href="pages/research/buellcenter.html">Temple Hoyne Buell Center at Columbia University: Morningside</a></p>
         <div class="project__image">
             <a href="pages/research/buellcenter.html"><img src="data/research/campus.gif"></a>
