--- a/index.html
+++ b/index.html
@@ -23,5 +23,9 @@
     <a class="links" href="about.html">about</a>
     <br>
 
+    <!-- Scatter Animation -->
+    <div id="scatter__intro"></div>
+    <script src="./script.js"></script>
+
 </body>
 </html>
