removed  homepage animation

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <br>
 
     <!-- Scatter Animation -->
-    <div id="scatter__intro"></div>
-    <script src="./script.js"></script>
+    <!-- <div id="scatter__intro"></div>
+    <script src="./script.js"></script> -->
 
 </body>
 </html>
