--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" src="./d3.js"></script>
     <link rel="stylesheet" href="./styles.css">
-    <link rel="icon" type="image/png" href="data/identity/faviconc.png"/>
+    <link rel="icon" type="image/png" href="data/identity/favicon-green.png"/>
     <title>Eddie Joe Antonio</title>
 </head>
 <body>
