updated vercell app link

--- a/pages/research/publicwifi.html
+++ b/pages/research/publicwifi.html
@@ -33,7 +33,7 @@
             The interactive website will be shared in the hopes that it can spark conversation around the potential in public WiFi. 
             <br>
             <br>
-            Flip through a progress presentation <a class="content__links" href="../../data/research/files/Antonio_LinkNYC Thesis Progress.pdf">here</a> for more detail on the project. 
+            Flip through a progress presentation <a class="content__links" href="../../data/research/files/Antonio_LinkNYC Thesis Progress.pdf">here</a> for more detail on the project, and check out a <em>very</em> preliminary live immersive experience <a class="content__links" href="https://storytelling-test.vercel.app/">here</a>. 
         </p>
         <div class="project__image">
             <img src="../../data/research/publicwifi_mockup.png">
