--- a/research.html
+++ b/research.html
@@ -23,7 +23,7 @@
     <br>
     <div class="project">
         <p class="project__index">0R</p>
-        <p class="project__header"><a class="project__links" href="pages/research/migrantsupportsystems.html">Migrant Support Systems: Analyzing Select Destinations of Governor Abbott's Refugee Removal Program</a></p>
+        <p class="project__header"><a class="project__links" href="pages/research/migrantsupportsystems.html">Migrant Support Systems: Analyzing Select Destinations of Asylum Seekers in American Cities</a></p>
         <div class="project__image">
             <a href="pages/research/migrantsupportsystems.html"><img src="data/research/dc_snippet.png"></a>
         </div>
