updated styles, text, etc.

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" href="data/identity/faviconc.png"/>
     <title>Eddie Joe Antonio</title>
 </head>
-<body>
+<body class="about__body">
     <h1><a class="title" href="https://eddiejoeantonio.com/">Eddie Joe Antonio</a></h1>
     <span class="responsive-spacing"></span>
 
@@ -21,9 +21,9 @@
     <a class="links" href="about.html">about</a>
 
     <span class="responsive-spacing"></span>
-    <p class="about__text">Hi! I'm Eddie Joe Antonio, and I'm a designer, researcher, and digital + physical builder. I'm a native New Yorker fascinated by cities and how we live in them--spatially, experientially, and digitally. I'm currently completing a <a class="about__links" href="https://www.arch.columbia.edu/programs/15-m-s-computational-design-practices">Master of Science in Computational Design Practices (M.S.CDP)</a> at Columbia University where I've trained in web development (front-end), mapmaking, parametric design for architectural practices, and computationally-driven analysis.</p>
-    <p class="about__text">Prior to graduate school, I worked as a furniture designer at <a class="about__links" href="https://gloriacortina.com/">Gloria Cortina Studio</a> in Mexico City, a landscape designer at <a class="about__links" href="https://www.starrwhitehouse.com/">Starr Whitehouse Landscape Architects and Planners</a> in New York City, and currently as a research assistant at <a class="about__links" href="https://buellcenter.columbia.edu/">the Buell Center</a> at Columbia University. </p>
-    <p class="about__text">I love biking, cooking/eating, gardening, and jazz music.</p>
-    <p class="about__text">If you'd like to get in touch, I can be reached at: <a class="about__links" href="mailto:eddiejoe.antonio@gmail.com">eddiejoe [dot] antonio [at] gmail [dot] com</a></p>
+    <p class="about__text">Eddie Joe Antonio is a computational designer and researcher. He is a native New Yorker fascinated by cities and how we live in them: spatially, experientially, and digitally. Eddie Joe is currently completing a <a class="about__links" href="https://www.arch.columbia.edu/programs/15-m-s-computational-design-practices">Master of Science in Computational Design Practices (M.S.CDP)</a> at Columbia University where he's trained in web development (front-end), mapmaking, parametric design for architectural practices, and computationally-driven analysis.</p>
+    <p class="about__text">Prior to graduate school, he worked as a furniture designer at <a class="about__links" href="https://gloriacortina.com/">Gloria Cortina Studio</a> in Mexico City, a landscape designer at <a class="about__links" href="https://www.starrwhitehouse.com/">Starr Whitehouse Landscape Architects and Planners</a> in New York City, and works currently as a research assistant at <a class="about__links" href="https://buellcenter.columbia.edu/">the Buell Center</a> at Columbia University. </p>
+    <p class="about__text">He loves biking, cooking, gardening, and playing music.</p>
+    <p class="about__text">If you'd like to get in touch, Eddie Joe can be reached at: <a class="about__links" href="mailto:eddiejoe.antonio@gmail.com">eddiejoe [dot] antonio [at] gmail [dot] com</a></p>
 </body>
 </html>
