--- a/pages/research/migrantsupportsystems.html
+++ b/pages/research/migrantsupportsystems.html
@@ -23,7 +23,7 @@
     <br>
     <div class="project">
         <p class="project__index">0R</p>
-        <p class="project__header">Migrant Support Systems: Analyzing Select Destinations of Asylum Seekers in American Cities</p>
+        <p class="project__header">Migrant Support Systems</p>
         <p class="project__text">This report utilizes spatial analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022. Together with my project partner <a class="content__links" href="https://www.hsianghsi.com/">Hsiang Hsi Lu</a>, we developed “refugee support system score” to rate New York City’s Port Authority Bus Terminal, Washington D.C.’s Home of the Vice President, and Martha’s Vineyard’s International Airport as viable alternatives for the housing, supporting, and processing of refugees against a control case of El Paso, Texas. The datasets used to generate this score were sourced from the American Community Survey, the decennial Census, the Department of Homeland Security, and generated from GoogleMaps through a custom, Python-driven data collection process. 
             <br>
             <br>
@@ -34,6 +34,24 @@
         </p>
         <div class="project__image">
             <img src="../../data/research/dc_snippet.png">
+        </div>
+    </div>
+
+    <!-- SUPPORTING Images -->
+    <div class="project">
+        <div class="supporting__image">
+            <img src="../../data/research/migrants_1.png">
+        </div>
+        <div class="supporting__image">
+            <img src="../../data/research/migrants_2.png">
+        </div>
+    </div>
+    <div class="project">
+        <div class="supporting__image">
+            <img src="../../data/research/migrants_3.png">
+        </div>
+        <div class="supporting__image">
+            <img src="../../data/research/migrants_4.png">
         </div>
     </div>
     <br><br>
