--- a/pages/research/publicwifi.html
+++ b/pages/research/publicwifi.html
@@ -23,22 +23,48 @@
     <br>
     <div class="project">
         <p class="project__index">1R</p>
-        <p class="project__header">Activating Public WiFi: Re-considering opportunities to connect in contemporary New York</p>
+        <p class="project__header">Activating Public WiFi</p>
         <p class="project__text">
             This ongoing project investigates the landscape of public WiFi in contemporary New York through a focus on the streetside LinkNYC kiosks.
-            Through analytical mapping and targeted ethnographies, I am developing a 3D web experience that critiques and explains conditions at four specific sites. 
+            Through analytical mapping and targeted ethnographies, I developed a 3D web experience that critiques and explains conditions at four specific sites. 
             Using these locations as a guide, the website proposes localized opportunities, urban interventions, and programmatic changes that can happen at public WiFi locations city-wide. 
             <br>
             <br>
-            The interactive website will be shared in the hopes that it can spark conversation around the potential in public WiFi. 
+            The interactive website is live online in the hopes that it can spark conversation around the potential in public WiFi. 
             <br>
             <br>
-            Flip through a progress presentation <a class="content__links" href="../../data/research/files/Antonio_LinkNYC Thesis Progress.pdf">here</a> for more detail on the project, and check out a <em>very</em> preliminary live immersive experience <a class="content__links" href="https://storytelling-test.vercel.app/">here</a>. 
+            Flip through a presentation <a class="content__links" href="../../data/research/files/Antonio_ThesisReview.pdf">here</a> for more detail on the project, and check out a live immersive experience <a class="content__links" href="https://greenwood-walkthrough.vercel.app/">here</a>. 
         </p>
         <div class="project__image">
-            <img src="../../data/research/publicwifi_mockup.png">
+            <img src="../../data/research/publicwifi_immersive.gif">
         </div>
     </div>
+    <!-- SUPPORTING Images -->
+    <div class="project">
+        <div class="supporting__image">
+            <img src="../../data/research/publicwifi_5.jpeg">
+        </div>
+        <div class="supporting__image">
+            <img src="../../data/research/publicwifi_6.png">
+        </div>
+    </div>
+    <div class="project">
+        <div class="supporting__image">
+            <img src="../../data/research/greenwood_still.png">
+        </div>
+        <div class="supporting__image">
+            <img src="../../data/research/lawrence_still.png">
+        </div>
+    </div>
+    <div class="project">
+        <div class="supporting__image">
+            <img src="../../data/research/timessquare_still.png">
+        </div>
+        <div class="supporting__image">
+            <img src="../../data/research/harlem_still.png">
+        </div>
+    </div>
+
     <br><br>
 </body>
 </html>
