--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" href="data/identity/favicon-green.png"/>
     <title>Eddie Joe Antonio</title>
 </head>
-<body>
+<body class="intro__body">
     <h1>
         <a class="title" href="https://eddiejoeantonio.com/">Eddie Joe Antonio</a>
     </h1>
