updated build with corrected mobile styles

--- a/pages/research/buellcenter.html
+++ b/pages/research/buellcenter.html
@@ -33,6 +33,16 @@
             <img src="../../data/research/campus.gif">
         </div>
     </div>
+
+    <!-- SUPPORTING Images -->
+    <div class="project">
+        <div class="supporting__image">
+            <img src="../../data/research/buell_1.JPG">
+        </div>
+        <div class="supporting__image">
+            <img src="../../data/research/buell_2.png">
+        </div>
+    </div>
     <br><br>
 </body>
 </html>
