--- a/pages/research/grasshopperparametric.html
+++ b/pages/research/grasshopperparametric.html
@@ -33,6 +33,25 @@
             <img src="../../data/research/prototype GIF.gif">
         </div>
     </div>
+    <br><br><br><br>
+
+    <!-- SUPPORTING Images -->
+    <div class="project">
+        <div class="supporting__image">
+            <img src="../../data/research/voting_1">
+        </div>
+        <div class="supporting__image">
+            <img src="../../data/research/voting_2.png">
+        </div>
+    </div>
+    <div class="project">
+        <div class="supporting__image">
+            <img src="../../data/research/voting_3.jpg">
+        </div>
+        <div class="supporting__image">
+            <img src="../../data/research/voting_4.gif">
+        </div>
+    </div>
     <br><br>
 </body>
 </html>
