updated build for GSAPP projects

--- a/pages/digital/dailysketch.html
+++ b/pages/digital/dailysketch.html
@@ -22,7 +22,7 @@
     
     <br>
     <div class="project">
-        <p class="project__index">2D</p>
+        <p class="project__index">3D</p>
         <p class="project__header">Some Sketches, Digitized</p>
         <p class="project__text">
             A personal project, these sketches are daily reflections. They document explorations, observations, and memories in a quick visual way. I built a simple gallery to view and share a selection of these images, and added a fun tool for filtering based on color. 
@@ -34,6 +34,27 @@
             <img src="../../data/digital/sketch.png">
         </div>
     </div>
+
+    <br><br><br><br>
+
+    <!-- SUPPORTING images -->
+    <div class="project">
+        <div class="supporting__image">
+            <img src="../../data/digital/1.jpg">
+        </div>
+        <div class="supporting__image">
+            <img src="../../data/digital/13.jpg">
+        </div>
+    </div>
+    <div class="project">
+        <div class="supporting__image">
+            <img src="../../data/digital/15.jpg">
+        </div>
+        <div class="supporting__image">
+            <img src="../../data/digital/29.jpg">
+        </div>
+    </div>
+
     <br><br>
 </body>
 </html>
