--- a/pages/digital/mesh.html
+++ b/pages/digital/mesh.html
@@ -36,6 +36,18 @@
             <img src="../../data/digital/meshvizb.gif">
         </div>
     </div>
+
+    <br><br><br><br>
+
+    <!-- SUPPORTING IMAGES -->
+    <div class="project">
+        <div class="supporting__image">
+            <img src="../../data/digital/mesh_map.png">
+        </div>
+        <div class="supporting__image">
+            <img src="../../data/digital/mesh_chart.png">
+        </div>
+    </div>
     <br><br>
 </body>
 </html>
