--- a/pages/digital/responsivesignage.html
+++ b/pages/digital/responsivesignage.html
@@ -22,7 +22,7 @@
     
     <br>
     <div class="project">
-        <p class="project__index">1D</p>
+        <p class="project__index">2D</p>
         <p class="project__header">Dynamic Displays: Historic Signs of Coney Island for the Coney Island-Bound Traveler</p>
         <p class="project__text">Through a dynamically-triggered projection, this project attempts to connect Brooklyn transit-users to the iconic imagery of their city. Whenever an outward-bound D train passes this installation, a dynamic light display turns on and showcases the historic neon signs of Coney Island. Pulling the arrival times from the MTA’s feed, a smart plug is triggered through an IFTT script whenever a train is passing, powering a projector and displaying the images. 
             <br>
@@ -36,6 +36,19 @@
             <img src="../../data/digital/responsivearch.gif">
         </div>
     </div>
+
+    <br><br><br><br>
+
+    <!-- SUPPORTING IMAGES -->
+    <div class="project">
+        <div class="supporting__image">
+            <img src="../../data/digital/responsivearch_signage.gif">
+        </div>
+        <div class="supporting__image">
+            <img src="../../data/digital/responsivearch_2.png">
+        </div>
+    </div>
+
     <br><br>
 </body>
 </html>
