--- a/pages/research/grasshopperparametric.html
+++ b/pages/research/grasshopperparametric.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../styles.css">
-    <link rel="icon" type="image/png" href="../../data/identity/faviconc.png"/>
+    <link rel="icon" type="image/png" href="../../data/identity/favicon-green.png"/>
     <title>Eddie Joe Antonio</title>
 </head>
 <body>
@@ -33,6 +33,7 @@
             <img src="../../data/research/prototype GIF.gif">
         </div>
     </div>
+    
     <br><br><br><br>
 
     <!-- SUPPORTING Images -->
@@ -41,12 +42,12 @@
             <img src="../../data/research/voting_1">
         </div>
         <div class="supporting__image">
-            <img src="../../data/research/voting_2.png">
+            <img src="../../data/research/voting_3.jpg">
         </div>
     </div>
     <div class="project">
         <div class="supporting__image">
-            <img src="../../data/research/voting_3.jpg">
+            <img src="../../data/research/voting_6.jpg">
         </div>
         <div class="supporting__image">
             <img src="../../data/research/voting_4.gif">
