--- a/pages/research/publicwifi.html
+++ b/pages/research/publicwifi.html
@@ -30,38 +30,41 @@
             Using these locations as a guide, the website proposes localized opportunities, urban interventions, and programmatic changes that can happen at public WiFi locations city-wide. 
             <br>
             <br>
-            The interactive website is live online in the hopes that it can spark conversation around the potential in public WiFi. 
+            The <a class="content__links" href="https://public-wifi.vercel.app/">interactive website</a> is live online in the hopes that it can spark conversation around the potential in public WiFi. 
             <br>
             <br>
             Flip through a presentation <a class="content__links" href="../../data/research/files/Antonio_ThesisReview.pdf">here</a> for more detail on the project, and check out a live immersive experience <a class="content__links" href="https://greenwood-walkthrough.vercel.app/">here</a>. 
         </p>
         <div class="project__image">
-            <img src="../../data/research/publicwifi_immersive.gif">
+            <img src="../../data/research/publicwifi_mockup.png">
         </div>
     </div>
+    
+    <br><br><br><br>
+
     <!-- SUPPORTING Images -->
+    <div class="project">
+        <div class="supporting__image">
+            <img src="../../data/research/greenwood_ui.jpg">
+        </div>
+        <div class="supporting__image">
+            <img src="../../data/research/lawrence_ui.jpg">
+        </div>
+    </div>
+    <div class="project">
+        <div class="supporting__image">
+            <img src="../../data/research/timessquare_ui.jpg">
+        </div>
+        <div class="supporting__image">
+            <img src="../../data/research/harlem_ui.jpg">
+        </div>
+    </div>
     <div class="project">
         <div class="supporting__image">
             <img src="../../data/research/publicwifi_5.jpeg">
         </div>
         <div class="supporting__image">
             <img src="../../data/research/publicwifi_6.png">
-        </div>
-    </div>
-    <div class="project">
-        <div class="supporting__image">
-            <img src="../../data/research/greenwood_still.png">
-        </div>
-        <div class="supporting__image">
-            <img src="../../data/research/lawrence_still.png">
-        </div>
-    </div>
-    <div class="project">
-        <div class="supporting__image">
-            <img src="../../data/research/timessquare_still.png">
-        </div>
-        <div class="supporting__image">
-            <img src="../../data/research/harlem_still.png">
         </div>
     </div>
 
