--- a/digital.html
+++ b/digital.html
@@ -29,14 +29,20 @@
     </div>
     <div class="project">
         <p class="project__index">1D</p>
+        <p class="project__header"><a class="project__links" href="pages/digital/newyorkpostglacial.html">New York, After the Glacier</a></p>
+        <div class="project__image">
+            <a href="pages/digital/newyorkpostglacial.html"><img src="../../data/digital/postglacial_1.gif"></a>
+        </div>
+    </div>
+    <div class="project">
+        <p class="project__index">2D</p>
         <p class="project__header"><a class="project__links" href="pages/digital/responsivesignage.html">Dynamic Displays: Historic Signs of Coney Island for the Coney Island-Bound Traveler</a></p>
         <div class="project__image">
             <a href="pages/digital/responsivesignage.html"><img src="data/digital/responsivearch.gif"></a>
         </div>
     </div>
-    <br>
     <div class="project">
-        <p class="project__index">2D</p>
+        <p class="project__index">3D</p>
         <p class="project__header"><a class="project__links" href="pages/digital/dailysketch.html">Some Sketches, Digitized</a></p>
         <div class="project__image">
             <a href="pages/digital/dailysketch.html"><img src="data/digital/sketch.png"></a>
