--- a/research.html
+++ b/research.html
@@ -46,6 +46,7 @@
             <a href="pages/research/grasshopperparametric.html"><img src="data/research/prototype GIF.gif"></a>
         </div>
     </div>
+
     <br>
     <div class="project">
         <p class="project__index">3R</p>
@@ -54,9 +55,19 @@
             <a href="pages/research/embodiedcarbon.html"><img src="data/research/embodiedcarbon.gif"></a>
         </div>
     </div>
+
     <br>
     <div class="project">
         <p class="project__index">4R</p>
+        <p class="project__header"><a class="project__links" href="pages/research/transitchinatown.html">Transit in an Ethnic Enclave: Chinatown-LES-Two Bridges</a></p>
+        <div class="project__image">
+            <a href="pages/research/transitchinatown.html"><img src="data/research/transit_poster.jpg"></a>
+        </div>
+    </div>
+
+    <br>
+    <div class="project">
+        <p class="project__index">5R</p>
         <p class="project__header"><a class="project__links" href="pages/research/buellcenter.html">Temple Hoyne Buell Center at Columbia University: Morningside</a></p>
         <div class="project__image">
             <a href="pages/research/buellcenter.html"><img src="data/research/campus.gif"></a>
