updated styles, updated Spatial section content

--- a/pages/digital/dailysketch.html
+++ b/pages/digital/dailysketch.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../styles.css">
-    <link rel="icon" type="image/png" href="../../data/identity/faviconc.png"/>
+    <link rel="icon" type="image/png" href="../../data/identity/favicon-green.png"/>
     <title>Eddie Joe Antonio</title>
 </head>
 <body>
@@ -35,7 +35,7 @@
         </div>
     </div>
 
-    <br><br><br><br>
+    <br><br>
 
     <!-- SUPPORTING images -->
     <div class="project">
