--- a/pages/spatial/miami.html
+++ b/pages/spatial/miami.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../styles.css">
-    <link rel="icon" type="image/png" href="../../data/identity/faviconc.png"/>
+    <link rel="icon" type="image/png" href="../../data/identity/favicon-green.png"/>
     <title>Eddie Joe Antonio</title>
 </head>
 <body>
@@ -34,6 +34,26 @@
 
         <div class="project__image">
             <img src="../../data/spatial/GSD Portfolio.jpg">
+        </div>
+    </div>
+
+    <br><br>
+
+    <!-- SUPPORTING images -->
+    <div class="project">
+        <div class="supporting__image">
+            <img src="../../data/spatial/miami_0.jpg">
+        </div>
+        <div class="supporting__image">
+            <img src="../../data/spatial/miami_1.jpg">
+        </div>
+    </div>
+    <div class="project">
+        <div class="supporting__image">
+            <img src="../../data/spatial/miami_2.jpg">
+        </div>
+        <div class="supporting__image">
+            <img src="../../data/spatial/miami_3.jpg">
         </div>
     </div>
     <br><br>
