--- a/pages/spatial/mpjstatepark.html
+++ b/pages/spatial/mpjstatepark.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../styles.css">
-    <link rel="icon" type="image/png" href="../../data/identity/faviconc.png"/>
+    <link rel="icon" type="image/png" href="../../data/identity/favicon-
+    .png"/>
     <title>Eddie Joe Antonio</title>
 </head>
 <body>
@@ -33,6 +34,19 @@
             <img src="../../data/spatial/210430_RENDERED-AERIAL-UPDATED-REDUCED-scaled.jpg">
         </div>
     </div>
+
+    <br><br>
+
+    <!-- SUPPORTING images -->
+    <div class="project">
+        <div class="supporting__image">
+            <img src="../../data/spatial/210430-Commemoration-Diagram-PLAN.jpg">
+        </div>
+        <div class="supporting__image">
+            <img src="../../data/spatial/mpj_2.jpg">
+        </div>
+    </div>
+
     <br><br>
 </body>
 </html>
