--- a/pages/spatial/furniture.html
+++ b/pages/spatial/furniture.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../styles.css">
-    <link rel="icon" type="image/png" href="../../data/identity/faviconc.png"/>
+    <link rel="icon" type="image/png" href="../../data/identity/favicon-green.png"/>
     <title>Eddie Joe Antonio</title>
 </head>
 <body>
@@ -31,6 +31,34 @@
         </p>
         <div class="project__image">
             <img src="../../data/spatial/IMG_2337.jpeg">
+        </div>
+    </div>
+
+    <br><br>
+
+    <!-- SUPPORTING images -->
+    <div class="project">
+        <div class="supporting__image">
+            <img src="../../data/spatial/furniture_2.jpeg">
+        </div>
+        <div class="supporting__image">
+            <img src="../../data/spatial/furniture_1.jpeg">
+        </div>
+    </div>
+    <div class="project">
+        <div class="supporting__image">
+            <img src="../../data/spatial/furniture_4.jpeg">
+        </div>
+        <div class="supporting__image">
+            <img src="../../data/spatial/furniture_5.jpeg">
+        </div>
+    </div>
+    <div class="project">
+        <div class="supporting__image">
+            <img src="../../data/spatial/furniture_3.jpeg">
+        </div>
+        <div class="supporting__image">
+            <img src="../../data/spatial/furniture_6.jpg">
         </div>
     </div>
     <br><br>
