updated Transit study page and files

--- a/pages/research/transitchinatown.html
+++ b/pages/research/transitchinatown.html
@@ -44,10 +44,10 @@ Southern Brooklyn.
             connectivity to the city, and lower
             percentage of immigrant residents.
             <br><br>
-            Review a research poster <a class="content__links" href="../../data/research/files/AntonioAbdallahLin_Transit.pdf">here</a> for more detail on the project. 
+            Review a research poster <a class="content__links" href="../../data/research/files/AntonioAbdallahLin_Transit.pdf">here</a> for quick information on the project, and a more thorough report <a class="content__links" href="../../data/research/files/AntonioLinAbdallah_ASAFinalReport.pdf">here</a> for a complete overview of the study. 
         </p>
         <div class="project__image">
-            <img src="../../data/research/transit_poster.jpg">
+            <img src="../../data/research/transit_0.jpg">
         </div>
     </div>    
     
@@ -59,9 +59,23 @@ Southern Brooklyn.
             <img src="../../data/research/transit.gif">
         </div>
         <div class="supporting__image">
-            <img src="../../data/research/transit_dashboard.png">
+            <img src="../../data/research/transit_3.png">
         </div>
     </div>
+    <div class="project">
+        <div class="supporting__image">
+            <img src="../../data/research/transit_dashboard.png">
+        </div>
+        <div class="supporting__image">
+            <img src="../../data/research/transit_4.png">
+        </div>
+    </div>
+    <div class="project">
+        <div class="supporting__image">
+            <img src="../../data/research/transit_1.png">
+        </div>
+    </div>
+
     <br><br>
 </body>
 </html>
