--- a/research.html
+++ b/research.html
@@ -61,7 +61,7 @@
         <p class="project__index">4R</p>
         <p class="project__header"><a class="project__links" href="pages/research/transitchinatown.html">Transit in an Ethnic Enclave: Chinatown-LES-Two Bridges</a></p>
         <div class="project__image">
-            <a href="pages/research/transitchinatown.html"><img src="data/research/transit_poster.jpg"></a>
+            <a href="pages/research/transitchinatown.html"><img src="data/research/transit_0.jpg"></a>
         </div>
     </div>
 
