Updated latino-ny image

--- a/digital.html
+++ b/digital.html
@@ -31,14 +31,14 @@
         <p class="project__index">1D</p>
         <p class="project__header"><a class="project__links" href="pages/digital/latinony.html">Latino New York</a></p>
         <div class="project__image">
-            <a href="pages/digital/latinony.html"><img src="../../data/digital/latino_0.png"></a>
+            <a href="pages/digital/latinony.html"><img src="data/digital/latino_0.png"></a>
         </div>
     </div>
     <div class="project">
         <p class="project__index">2D</p>
         <p class="project__header"><a class="project__links" href="pages/digital/newyorkpostglacial.html">New York, After the Glacier</a></p>
         <div class="project__image">
-            <a href="pages/digital/newyorkpostglacial.html"><img src="../../data/digital/postglacial_1.gif"></a>
+            <a href="pages/digital/newyorkpostglacial.html"><img src="data/digital/postglacial_1.gif"></a>
         </div>
     </div>
     <div class="project">
